SERVER-30584 Always send legal refresh batch sizes